--- a/cloud/views/analytics.ejs
+++ b/cloud/views/analytics.ejs
@@ -2,16 +2,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sample App</title>
+    <title>Admin page</title>
+
   </head>
   <body>
     <h1>Analytics</h1>
     <form method="post" action="/logout">
           <input type="submit" value="Logout">
+    </form>
     <span> Total Users: <%=numUsers %> </span>
     <ul>
       <% users.forEach(function(user, index, usersToShow) { %>
-        <li> <%= user.get("firstName") %> <%= user.get("lastName") %> &nbsp; <%=user.createdAt %> </li>
+        <li> <%= user.get("firstName") %> <%= user.get("lastName") %> &nbsp; <%=tzDates[index] %> </li>
       <% }); %>
     </ul>
   </body>
